...
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="SourceListViewController" customModule="Coppice" customModuleProvider="target">
            <connections>
                <outlet property="actionPullDownButton" destination="vAP-07-vCU" id="RmV-dP-cij"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <outlineView identifier="SidebarTable" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" autosaveColumns="NO" autosaveName="MainSidebar" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="14" autosaveExpandedItems="YES" autoresize
                                <rect key="frame" x="0.0" y="0.0" width="228" height="284"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                        <items>
                                            <menuItem state="on" image="NSAddTemplate" hidden="YES" id="e1O-Hb-uWd"/>
                                            <menuItem title="New Page" id="PHD-jx-lMM">
                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                <menu key="submenu" title="New Page" id="WDy-Bp-i56">
...
                                                </menu>
                                            </menuItem>
                                            <menuItem title="New Folder" id="x8U-8o-5Mf">
                                                <connections>
                                                    <action selector="newFolder:" target="-1" id="1zo-Fb-Yb9"/>
...
                                            <menuItem title="New Folder From Selection" id="4aQ-rN-htR">
                                                <connections>
                                                    <action selector="newFolderFromSelection:" target="-1" id="Pnc-WJ-n7m"/>
                                                </connections>
                                            </menuItem>
...
                                    </menu>
                                </popUpButtonCell>
                                <accessibility identifier="SidebarAdd"/>
                            </popUpButton>
                            <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="vAP-07-vCU">
...
                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                <connections>
                                                    <action selector="duplicatePage:" target="-1" id="7Bo-7r-pJ1"/>
                                                </connections>
                                            </menuItem>
                                            <menuItem title="Delete…" id="7vH-VR-9Wk">
                                                <connections>
                                                    <action selector="deleteItems:" target="-2" id="pj0-fh-qod"/>
                                                </connections>
                                            </menuItem>
...
                                    </menu>
                                </popUpButtonCell>
                                <accessibility identifier="SidebarAction"/>
                            </popUpButton>
                        </subviews>
...
