...
        return self.icon
    }

    var localizedName: String {
        switch self {
        case .text:
            return NSLocalizedString("Text Page", comment: "Text content name")
        case .image:
            return NSLocalizedString("Image Page", comment: "Image content name")
        }
    }

    var keyEquivalent: String {
        switch self {
        case .text, .image:
...
