...
            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
            <value key="minSize" type="size" width="575" height="350"/>
            <view key="contentView" id="se5-gp-TjO">
                <rect key="frame" x="0.0" y="0.0" width="1175" height="682"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            </view>
            <accessibility identifier="DocumentWindow"/>
            <connections>
                <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
            </connections>
            <point key="canvasLocation" x="366.5" y="-655"/>
        </window>
        <customObject id="vF9-dA-dmp" customClass="NewPageMenuDelegate" customModule="Coppice" customModuleProvider="target"/>
...
