...
            return results
        }

        var results = [SearchResultGroup]()
        let canvases = self.matchingCanvases
        if canvases.count > 0 {
            results.append(SearchResultGroup(title: "Canvases", results: canvases))
        }

        let pages = self.matchingPages
        if pages.count > 0 {
            results.append(SearchResultGroup(title: "Pages", results: pages))
        }
...
