...
                <outlet property="versionLabel" destination="iXO-1v-h9I" id="xPX-L3-uz3"/>
                <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Welcome to Coppice" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <rect key="contentRect" x="196" y="240" width="670" height="398"/>
            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
            <view key="contentView" id="se5-gp-TjO">
                <rect key="frame" x="0.0" y="0.0" width="670" height="398"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                            </imageView>
                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="40" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JA7-Ur-Ay5">
                                <rect key="frame" x="56" y="57" width="320" height="96"/>
                                <subviews>
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aqw-GZ-QFI">
                                        <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
                                        <buttonCell key="cell" type="square" title="New…" bezelStyle="shadowlessSquare" image="NewDocument" imagePosition="above" alignment="center" imageScaling="proportionallyDown" inset="2" id="4gG-eY-GE8">
                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                        <color key="contentTintColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                        <connections>
                                            <action selector="newDocument:" target="-2" id="DHN-c0-UJX"/>
...
